--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "prototype-nodejs",
   "version": "0.1.0",
   "description": "Prototype using nodejs for checking multiplayer case using JS in Gamkedo club context",
-  "main": "index.html",
+  "main": "./server/mainserv.js",
   "author": "Klaim",
+  "type": "module",
   "engines": {
     "node": "^12.2"
   },
