--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": "^12.2"
   },
   "dependencies": {
-    "ws": "^7.0.0"
+    "ws": "^7.0.0",
+    "express": "^4.17.1"
   },
   "repository": {
     "type": "git",
